backend/api/static/styles.css
:root {
  --primary-violet: #632949;
  --primary-dark: #000;
  --primary-grey: #dcdcdc;
  --secondary-violet: #8b426b;
  --white: #fff;
  --primary-pink: #cdadca;
  --color-red-font: #8c3c4f;
}

.wiw-group-data {
  max-width: 1024px;
  margin-left: auto;
  margin-right: auto;
}

.wiw-title-container {
  display: flex;
  justify-content: space-between;
  border-top: 1px solid #ababab;
  cursor: pointer;
  color: var(--color-red-font);
  align-items: center;
}

.wiw-group-title {
  font-weight: 300;
  color: var(--color-red-font);
  padding: 0.35em 27px 0.45em 0;
  font-size: 23px;
  display: block;
}

.wiw-group-title.layer-2 {
  margin-top: 10px;
  font-size: 30px;
}

.wiw-group-description {
  color: black;
}

.wiw-profile-picture {
  display: block;
  width: 70%;
  height: 100%;
  object-fit: contain;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1em;
}

.wiw-group-content-wrapper {
  display: grid;
  grid-template-rows: 0fr;
  transition: 0.2s ease-out;
}

.wiw-group-content-wrapper.is-open {
  grid-template-rows: 1fr;
}

.wiw-group-content {
  /* For the transition to work  */
  overflow: hidden;
}

.wiw-people-container {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: wrap;
  margin-left: -1.5%;
  margin-right: -1.5%;
}

.wiw-person-attrs-container {
  gap: 1em;
  display: grid;
  border: none;
}

.wiw-person-attrs-col-1 {
  grid-column: 1 / 2;
  text-align: end;
}

.wiw-person-attrs-col-2 {
  grid-column: 2 / 4;
}

.wiw-person-attr {
  color: #969696;
}

.wiw-profile-text {
  text-align: center;
}

.wiw-person-image {
  padding-top: 20%;
  position: relative;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1.2em;
  height: 100%;
  width: 100%;
}
.wiw-profile-picture {
  aspect-ratio: 7 / 9;
  width: 100%;
  object-fit: cover;
}

.wiw-person-container {
  position: relative;
  margin-left: 1.5%;
  margin-right: 1.5%;
  width: 100%;
  margin-bottom: auto;
}

@media (min-width: 660px) {
  .wiw-person-container {
    width: 47%;
  }
  div {
    font-size: 16.25px;
  }
}

@media (min-width: 1100px) {
  .wiw-person-container {
    width: 30.33%;
  }
  div {
    font-size: 18.75px;
  }
}

@media (min-width: 1300px) {
  .wiw-person-container {
    width: 22%;
  }
  div {
    font-size: 20px;
  }
}

